fix transition & toggle position on mobile

--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -32,7 +32,7 @@
   flex:1;
   overflow: hidden;
   cursor: pointer;
-  transition: all 400ms ease-in-out !important;
+  transition: all 200ms ease-in-out !important;
 
   &:hover{
     background: var(--card-hover);
