--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -20,6 +20,6 @@
     color: var(--text-color2);
   }
   &__toggle{
-    // margin-left: auto !important;
+    margin-left: auto !important;
   }
 }
